[284426] [content assist] [exceptions] Internal error on content assist in nested function