@@ -15,7 +15,6 @@ import org.eclipse.wst.jsdt.core.IJavaScriptElement;
 import org.eclipse.wst.jsdt.core.IJavaScriptUnit;
 import org.eclipse.wst.jsdt.core.IType;
 import org.eclipse.wst.jsdt.core.JavaScriptModelException;
-import org.eclipse.wst.jsdt.core.Signature;
 import org.eclipse.wst.jsdt.core.dom.ASTNode;
 import org.eclipse.wst.jsdt.internal.compiler.lookup.Binding;
 
@@ -57,35 +56,35 @@ public Object getConstant() throws JavaScriptModelException {
 	String constantSource = new String(constantSourceChars);
 	String signature = info.getTypeSignature();
 	try {
-		if (signature.equals(Signature.SIG_INT)) {
-			constant = new Integer(constantSource);
-		} else if (signature.equals(Signature.SIG_SHORT)) {
-			constant = new Short(constantSource);
-		} else if (signature.equals(Signature.SIG_BYTE)) {
-			constant = new Byte(constantSource);
-		} else if (signature.equals(Signature.SIG_BOOLEAN)) {
-			constant = Boolean.valueOf(constantSource);
-		} else if (signature.equals(Signature.SIG_CHAR)) {
-			if (constantSourceChars.length != 3) {
-				return null;
-			}
-			constant = new Character(constantSourceChars[1]);
-		} else if (signature.equals(Signature.SIG_DOUBLE)) {
-			constant = new Double(constantSource);
-		} else if (signature.equals(Signature.SIG_FLOAT)) {
-			constant = new Float(constantSource);
-		} else if (signature.equals(Signature.SIG_LONG)) {
-			if (constantSource.endsWith("L") || constantSource.endsWith("l")) { //$NON-NLS-1$ //$NON-NLS-2$
-				int index = constantSource.lastIndexOf("L");//$NON-NLS-1$
-				if (index != -1) {
-					constant = new Long(constantSource.substring(0, index));
-				} else {
-					constant = new Long(constantSource.substring(0, constantSource.lastIndexOf("l")));//$NON-NLS-1$
-				}
-			} else {
-				constant = new Long(constantSource);
-			}
-		} else if (signature.equals("QString;")) {//$NON-NLS-1$
+//		if (signature.equals(Signature.SIG_INT)) {
+//			constant = new Integer(constantSource);
+//		} else if (signature.equals(Signature.SIG_SHORT)) {
+//			constant = new Short(constantSource);
+//		} else if (signature.equals(Signature.SIG_BYTE)) {
+//			constant = new Byte(constantSource);
+//		} else if (signature.equals(Signature.SIG_BOOLEAN)) {
+//			constant = Boolean.valueOf(constantSource);
+//		} else if (signature.equals(Signature.SIG_CHAR)) {
+//			if (constantSourceChars.length != 3) {
+//				return null;
+//			}
+//			constant = new Character(constantSourceChars[1]);
+//		} else if (signature.equals(Signature.SIG_DOUBLE)) {
+//			constant = new Double(constantSource);
+//		} else if (signature.equals(Signature.SIG_FLOAT)) {
+//			constant = new Float(constantSource);
+//		} else if (signature.equals(Signature.SIG_LONG)) {
+//			if (constantSource.endsWith("L") || constantSource.endsWith("l")) { //$NON-NLS-1$ //$NON-NLS-2$
+//				int index = constantSource.lastIndexOf("L");//$NON-NLS-1$
+//				if (index != -1) {
+//					constant = new Long(constantSource.substring(0, index));
+//				} else {
+//					constant = new Long(constantSource.substring(0, constantSource.lastIndexOf("l")));//$NON-NLS-1$
+//				}
+//			} else {
+//				constant = new Long(constantSource);
+//			}
+		/*} else*/ if (signature.equals("QString;")) {//$NON-NLS-1$
 			constant = constantSource;
 		}
 	} catch (NumberFormatException e) {
